feature(UserReadArticle): Implement User Read/Access Article
ensure that data model for the articles feature was set up with sequelize
ensure unit tests are written to test the functionality to be implemented
create a controller logic to enable user read/access a specific article
ensure there are validations for user input
Update swagger documentation to include this feature

[Delivers #167416764]
