# src/middleware/validation.schema.js
@@ -82,6 +82,33 @@ const ratingSchema = {
   }
 };
 
+const createArticleSchema = {
+  body: {
+    title: Joi.string()
+      .trim()
+      .min(3)
+      .required()
+      .error(
+        new Error(
+          'Please provide a title for your article with minimum of 3 characters'
+        )
+      ),
+    description: Joi.required(),
+    body: Joi.required(),
+    image: Joi.required()
+  }
+};
+
+const articleParamsSchema = {
+  params: {
+    articleId: Joi.number()
+      .integer()
+      .positive()
+      .required()
+      .error(new Error('Please input a valid number as article ID'))
+  }
+};
+
 export default {
   '/signup': createAccountSchema,
   '/login': loginSchema,
@@ -91,5 +118,7 @@ export default {
   '/user/:id': updateProfileSchema,
   '/bookmark': bookmarkArticle,
   '/unbookmark': bookmarkArticle,
-  '/:articleId/ratings': ratingSchema
+  '/:articleId/ratings': ratingSchema,
+  '/': createArticleSchema,
+  '/:articleId': articleParamsSchema
 };
